[kube-prometheus-stack] Clean up comment on scrapeConfigSelector
Signed-off-by: Johannes Schnatterer <johannes.schnatterer@cloudogu.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -3686,10 +3686,9 @@ prometheus:
     ## scrapeConfigs to be selected for target discovery.
     ## If matchLabels.release: "{{ $.Release.Name }}" the prometheus resource will be created
     ## with selectors based on values in the helm deployment, which will also match the scrapeConfigs created
-    ## To remove matchLabels from the selector condition, explicit set matchLabels to null. If not other selectors are configured, prometheus-operator will select all scrapeConfigs.
+    ## To remove matchLabels from the selector condition, explicitly set matchLabels to null.
+    ## If no other selectors are configured, prometheus-operator will select all scrapeConfigs.
     ## To remove the release label from the matchLabels condition, explicit set release to null. 
-
-This comment may clarifies, if end-users want to used different selectors other than matchLabels or release.
     ## If null, exclude the field from the prometheusSpec (keeping  downward compatibility with older versions of CRD)
     ##
     scrapeConfigSelector:
