[kube-prometheus-stack] Implement exemplary logic described in #4818
For a selector (scrapeConfigSelector)
and a namespaceSelector (scrapeConfigNamespaceSelector)

Signed-off-by: Johannes Schnatterer <johannes.schnatterer@cloudogu.com>

--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -249,11 +249,8 @@ spec:
 {{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.scrapeConfigSelector) }}
   scrapeConfigSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.scrapeConfigSelector) . | nindent 4 }}
 {{- end }}
-{{- if .Values.prometheus.prometheusSpec.scrapeConfigNamespaceSelector }}
-  scrapeConfigNamespaceSelector:
-{{ tpl (toYaml .Values.prometheus.prometheusSpec.scrapeConfigNamespaceSelector | indent 4) . }}
-{{ else }}
-  scrapeConfigNamespaceSelector: {}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.scrapeConfigNamespaceSelector) }}
+  scrapeConfigNamespaceSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.scrapeConfigNamespaceSelector) . | nindent 4 }}
 {{- end }}
 {{- if .Values.prometheus.prometheusSpec.storageSpec }}
   storage:
