--- a/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
+++ b/charts/kube-prometheus-stack/templates/prometheus/prometheus.yaml
@@ -158,53 +158,23 @@ spec:
 {{ toYaml .Values.prometheus.prometheusSpec.configMaps | indent 4 }}
 {{- end }}
   serviceAccountName: {{ template "kube-prometheus-stack.prometheus.serviceAccountName" . }}
-{{- if .Values.prometheus.prometheusSpec.serviceMonitorSelector }}
-  serviceMonitorSelector:
-{{ tpl (toYaml .Values.prometheus.prometheusSpec.serviceMonitorSelector | indent 4) . }}
-{{ else if .Values.prometheus.prometheusSpec.serviceMonitorSelectorNilUsesHelmValues  }}
-  serviceMonitorSelector:
-    matchLabels:
-      release: {{ $.Release.Name | quote }}
-{{ else }}
-  serviceMonitorSelector: {}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.serviceMonitorSelector) }}
+  serviceMonitorSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.serviceMonitorSelector) . | nindent 4 }}
 {{- end }}
-{{- if .Values.prometheus.prometheusSpec.serviceMonitorNamespaceSelector }}
-  serviceMonitorNamespaceSelector:
-{{ tpl (toYaml .Values.prometheus.prometheusSpec.serviceMonitorNamespaceSelector | indent 4) . }}
-{{ else }}
-  serviceMonitorNamespaceSelector: {}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.serviceMonitorNamespaceSelector) }}
+  serviceMonitorNamespaceSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.serviceMonitorNamespaceSelector) . | nindent 4 }}
 {{- end }}
-{{- if .Values.prometheus.prometheusSpec.podMonitorSelector }}
-  podMonitorSelector:
-{{ tpl (toYaml .Values.prometheus.prometheusSpec.podMonitorSelector | indent 4) . }}
-{{ else if .Values.prometheus.prometheusSpec.podMonitorSelectorNilUsesHelmValues  }}
-  podMonitorSelector:
-    matchLabels:
-      release: {{ $.Release.Name | quote }}
-{{ else }}
-  podMonitorSelector: {}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.podMonitorSelector) }}
+  podMonitorSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.podMonitorSelector) . | nindent 4 }}
 {{- end }}
-{{- if .Values.prometheus.prometheusSpec.podMonitorNamespaceSelector }}
-  podMonitorNamespaceSelector:
-{{ tpl (toYaml .Values.prometheus.prometheusSpec.podMonitorNamespaceSelector | indent 4) . }}
-{{ else }}
-  podMonitorNamespaceSelector: {}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.podMonitorNamespaceSelector) }}
+  podMonitorNamespaceSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.podMonitorNamespaceSelector) . | nindent 4 }}
 {{- end }}
-{{- if .Values.prometheus.prometheusSpec.probeSelector }}
-  probeSelector:
-{{ tpl (toYaml .Values.prometheus.prometheusSpec.probeSelector | indent 4) . }}
-{{ else if .Values.prometheus.prometheusSpec.probeSelectorNilUsesHelmValues  }}
-  probeSelector:
-    matchLabels:
-      release: {{ $.Release.Name | quote }}
-{{ else }}
-  probeSelector: {}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.probeSelector) }}
+  probeSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.probeSelector) . | nindent 4 }}
 {{- end }}
-{{- if .Values.prometheus.prometheusSpec.probeNamespaceSelector }}
-  probeNamespaceSelector:
-{{ tpl (toYaml .Values.prometheus.prometheusSpec.probeNamespaceSelector | indent 4) . }}
-{{ else }}
-  probeNamespaceSelector: {}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.probeNamespaceSelector) }}
+  probeNamespaceSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.probeNamespaceSelector) . | nindent 4 }}
 {{- end }}
 {{- if and (not .Values.prometheus.agentMode) (or .Values.prometheus.prometheusSpec.remoteRead .Values.prometheus.prometheusSpec.additionalRemoteRead) }}
   remoteRead:
@@ -229,21 +199,11 @@ spec:
 {{ toYaml .Values.prometheus.prometheusSpec.securityContext | indent 4 }}
 {{- end }}
 {{- if not .Values.prometheus.agentMode }}
-{{- if .Values.prometheus.prometheusSpec.ruleNamespaceSelector }}
-  ruleNamespaceSelector:
-{{ tpl (toYaml .Values.prometheus.prometheusSpec.ruleNamespaceSelector | indent 4) . }}
-{{ else }}
-  ruleNamespaceSelector: {}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.ruleNamespaceSelector) }}
+  ruleNamespaceSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.ruleNamespaceSelector) . | nindent 4 }}
 {{- end }}
-{{- if .Values.prometheus.prometheusSpec.ruleSelector }}
-  ruleSelector:
-{{ tpl (toYaml .Values.prometheus.prometheusSpec.ruleSelector | indent 4) . }}
-{{- else if .Values.prometheus.prometheusSpec.ruleSelectorNilUsesHelmValues }}
-  ruleSelector:
-    matchLabels:
-      release: {{ $.Release.Name | quote }}
-{{ else }}
-  ruleSelector: {}
+{{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.ruleSelector) }}
+  ruleSelector: {{ tpl (toYaml .Values.prometheus.prometheusSpec.ruleSelector) . | nindent 4 }}
 {{- end }}
 {{- end }}
 {{- if not (kindIs "invalid" .Values.prometheus.prometheusSpec.scrapeConfigSelector) }}
