--- a/charts/prometheus-nginx-exporter/Chart.yaml
+++ b/charts/prometheus-nginx-exporter/Chart.yaml
@@ -1,6 +1,6 @@
 ---
 apiVersion: v2
-description: A Helm chart for the Prometheus NGINX Exporter
+description: A Helm chart for NGINX Prometheus Exporter
 name: prometheus-nginx-exporter
 version: 0.2.2
 appVersion: 0.11.0
@@ -22,12 +22,12 @@ annotations:
   artifacthub.io/links: |
     - name: Chart Source
       url: https://github.com/prometheus-community/helm-charts
-    - name: Nginx exporter
+    - name: NGINX Prometheus Exporter
       url: https://github.com/nginxinc/nginx-prometheus-exporter
   artifacthub.io/maintainers: |
     - name: nlamirault
       email: nicolas.lamirault@gmail.com
-
+type: application
 dependencies:
   - name: nginx
     version: "15.3.4"
