[kube-prometheus-stack] Implement deprecation warning for *NilUsesHelmValues
Signed-off-by: Johannes Schnatterer <johannes.schnatterer@cloudogu.com>

--- a/charts/kube-prometheus-stack/values.yaml
+++ b/charts/kube-prometheus-stack/values.yaml
@@ -28,6 +28,10 @@ commonLabels: {}
 # scmhash: abc123
 # myLabel: aakkmd
 
+## Checks if any deprecated values are used
+##
+checkDeprecation: true
+
 ## Install Prometheus Operator CRDs
 ##
 crds:
