[alertmanager] Add apiVersion and kind to StatefulSet volumeClaimTemplates
Signed-off-by: Lennart Schedin <lennart.schedin@gmail.com>

--- a/charts/alertmanager/templates/statefulset.yaml
+++ b/charts/alertmanager/templates/statefulset.yaml
@@ -230,7 +230,9 @@ spec:
         {{- end }}
   {{- if .Values.persistence.enabled }}
   volumeClaimTemplates:
-    - metadata:
+    - apiVersion: v1
+      kind: PersistentVolumeClaim
+      metadata:
         name: storage
       spec:
         accessModes:
