Add ability to set topologySpreadConstraints for prometheus-snmp-exporter
Signed-off-by: Pavel Timofeev <timp87@gmail.com>

--- a/charts/prometheus-snmp-exporter/values.yaml
+++ b/charts/prometheus-snmp-exporter/values.yaml
@@ -12,6 +12,7 @@ imagePullSecrets: []
 nodeSelector: {}
 tolerations: []
 affinity: {}
+topologySpreadConstraints: []
 
 ## Assign a PriorityClassName to pods if set
 # priorityClassName: ""
